--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ markdown: kramdown
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : My Blog
-tagline: Blog by Eve
+title : Ev Worthington
+tagline: Web Designer & Developer
 author :
   name : Eve Worthington
   email : worthington.ee@gmail.com
